--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,7 +12,13 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-          registry-url: https://npm.pkg.github.com/
+          # registry-url: https://npm.pkg.github.com
+          # scope: "@Fndroid"
+      - run: |
+          echo "//npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN" > ~/.npmrc
+          npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.PKG_GITHUB_TOKEN}}
       - run: npm ci
       - run: npm publish
         env:
